--- a/portfolio/timer/index.html
+++ b/portfolio/timer/index.html
@@ -35,6 +35,7 @@
         <button class="stop"><i class="fa-solid fa-stopwatch"></i></button>
         <button class="reset"><i class="fa-solid fa-x"></i></button>
         <button class="history">
+          archiwum
           <i class="fa-solid fa-clock-rotate-left"></i>
         </button>
       </div>
