--- a/portfolio/timer/index.html
+++ b/portfolio/timer/index.html
@@ -23,6 +23,7 @@
     <div class="wrapper">
       <p class="info">
         <i class="fa-solid fa-question"></i>
+        <!--  <i class="fa-solid fa-brush"></i> -->
       </p>
 
       <h1>Stoper</h1>
