--- a/portfolio/sandwitch generator/index.html
+++ b/portfolio/sandwitch generator/index.html
@@ -15,23 +15,33 @@
       <div class="wrapper">
         <div class="ingredients">
           <ul class="block-list">
-            <li><input type="checkbox" />Chleb</li>
-            <li><input type="checkbox" />Masło</li>
-            <li><input type="checkbox" />Majonez</li>
-            <li><input type="checkbox" />Ketchup</li>
-            <li><input type="checkbox" />Szynka</li>
-            <li><input type="checkbox" />Ser żółty</li>
-            <li><input type="checkbox" />Pomidor</li>
-            <li><input type="checkbox" />Cebula</li>
-            <li><input type="checkbox" />Sałata</li>
+            <li><input type="checkbox" id="chleb" /><span>Chleb</span></li>
+            <li><input type="checkbox" id="maslo" />Masło</li>
+            <li><input type="checkbox" id="majonez" />Majonez</li>
+            <li><input type="checkbox" id="ketchup" />Ketchup</li>
+            <li><input type="checkbox" id="szynka" />Szynka</li>
+            <li><input type="checkbox" id="ser" />Ser żółty</li>
+            <li><input type="checkbox" id="pomidor" />Pomidor</li>
+            <li><input type="checkbox" id="cebula" />Cebula</li>
+            <li><input type="checkbox" id="salata" />Sałata</li>
           </ul>
         </div>
-        <div class="sandwich">foto kanapki</div>
+        <div class="sandwich">
+          <div class="fot-chleb">1</div>
+          <div class="fot-maslo">2</div>
+          <div class="fot-majonez">3</div>
+          <div class="fot-ketchup">4</div>
+          <div class="fot-szynka">5</div>
+          <div class="fot-ser">6</div>
+          <div class="fot-pomidor">7</div>
+          <div class="fot-cebula">8</div>
+          <div class="fot-salata">9</div>
+        </div>
       </div>
       <div class="visual-box">
         <div class="result"></div>
         <p>Ilość kalorii</p>
-        <div class="kcal"></div>
+        <div class="kcal">10</div>
       </div>
     </div>
     <script src="script.js"></script>
