--- a/portfolio/Searcher 2/index.html
+++ b/portfolio/Searcher 2/index.html
@@ -33,6 +33,7 @@
     </div>
     <main id="root"></main>
     <script type="module" src="dom-utlis.js"></script>
+    <script type="module" src="view-dashboard.js"></script>
     <script type="module" src="app.js"></script>
   </body>
 </html>
