--- a/portfolio/Searcher 2/index.html
+++ b/portfolio/Searcher 2/index.html
@@ -34,6 +34,7 @@
     <main id="root"></main>
     <script type="module" src="dom-utlis.js"></script>
     <script type="module" src="view-dashboard.js"></script>
+    <script type="module" src="view-details.js"></script>
     <script type="module" src="app.js"></script>
   </body>
 </html>
